[package]
name = "ev3_ros_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
safe_drive = "0.4"
ev3_ros_msg = { path = "/tmp/atsushi_ws/ev3_ros_msg" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }

[build-dependencies]
protox = "0.7"
tonic-build = "0.12"

[package.metadata.ros]
msg = ["ev3_ros_msg"]
msg_dir = "/tmp/atsushi_ws"
safe_drive_version = "0.4"
