[package]
name = "ev3_ros_bridge"
version = "0.1.0"
edition.workspace = true

[dependencies]
tonic = "0.14.2"
prost = "0.13"
safe_drive = "0.4"
ev3_ros_msg = { path = "/tmp/atsushi_ws/ev3_ros_msg" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
ev3_proto = { path = "../ev3_proto" }

[package.metadata.ros]
msg = ["ev3_ros_msg"]
msg_dir = "/tmp/atsushi_ws"
safe_drive_version = "0.4"
